--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <title>CI/CD Homework</title>
 </head>
-
+<body>
   <h1>Hello from GitHub Actions!</h1>
-  <p>This is my static page deployed from the <strong>master</strong> branch.</p>
+  <p>This is my static page deployed from the <strong>feature</strong> branch.</p>
 </body>
 </html>
